Add route53:ListHostedZonesByVPC to network-mgmt role

--- a/hack/olm-registry/olm-artifacts-template.yaml
+++ b/hack/olm-registry/olm-artifacts-template.yaml
@@ -217,6 +217,7 @@ objects:
             - "ram:ListPrincipals"
             - "ram:ListResources"
             - "ram:RejectResourceShareInvitation"
+            - "route53:ListHostedZonesByVPC"
             - "route53resolver:AssociateResolverRule"
             - "route53resolver:DeleteResolverRule"
             - "route53resolver:DisassociateResolverRule"
