Add ServiceQuotasReadOnlyAccess managed policy to Read only users
Signed-off-by: Feng Huang <fehuang@redhat.com>

--- a/hack/olm-registry/olm-artifacts-template.yaml
+++ b/hack/olm-registry/olm-artifacts-template.yaml
@@ -336,3 +336,4 @@ objects:
     - "AmazonS3ReadOnlyAccess"
     - "IAMReadOnlyAccess"
     - "CloudWatchReadOnlyAccess"
+    - "ServiceQuotasReadOnlyAccess"
