--- a/test/deploy/aws.managed.openshift.io_v1alpha1_awsfederatedrole_readonly_cr.yaml
+++ b/test/deploy/aws.managed.openshift.io_v1alpha1_awsfederatedrole_readonly_cr.yaml
@@ -25,3 +25,4 @@ spec:
    - "AmazonS3ReadOnlyAccess"
    - "IAMReadOnlyAccess"
    - "CloudWatchReadOnlyAccess"
+   - "ServiceQuotasReadOnlyAccess"
