--- a/deploy/crds/aws.managed.openshift.io_accountclaims.yaml
+++ b/deploy/crds/aws.managed.openshift.io_accountclaims.yaml
@@ -101,6 +101,15 @@ spec:
                 type: object
               customTags:
                 type: string
+              fleetManagerConfig:
+                description: FleetManagerConfig contains configuration specfic to
+                  account claims
+                properties:
+                  trustedARN:
+                    type: string
+                required:
+                - trustedARN
+                type: object
               kmsKeyId:
                 type: string
               legalEntity:
