--- a/hack/olm-registry/olm-artifacts-template.yaml
+++ b/hack/olm-registry/olm-artifacts-template.yaml
@@ -56,6 +56,8 @@ parameters:
 - name: FEATURE_ACCOUNTPOOL_VALIDATION
   required: false
   value: "false"
+- name: FEATURE_ACCOUNTCLAIM_FLEET_MANAGER_TRUSTED_ARN
+  value: "false"
 - name: AMIOWNER
   require: false
   value: "309956199498"
@@ -117,6 +119,7 @@ objects:
     feature.validation_move_account: ${FEATURE_VALIDATE_MOVE_ACCOUNT}
     feature.validation_tag_account: ${FEATURE_VALIDATE_TAG_ACCOUNT}
     feature.accountpool_validation: ${FEATURE_ACCOUNTPOOL_VALIDATION}
+    feature.accountcliam_fleet_manger_trusted_arn: ${FEATURE_ACCOUNTCLAIM_FLEET_MANAGER_TRUSTED_ARN}
 
 - apiVersion: aws.managed.openshift.io/v1alpha1
   kind: AccountPool
