[OSD-19300-update-olm] Updated feature flag field

--- a/hack/olm-registry/olm-artifacts-template.yaml
+++ b/hack/olm-registry/olm-artifacts-template.yaml
@@ -57,6 +57,7 @@ parameters:
   required: false
   value: "false"
 - name: FEATURE_ACCOUNTCLAIM_FLEET_MANAGER_TRUSTED_ARN
+  required: false
   value: "false"
 - name: AMIOWNER
   require: false
